# session-tracker-gui

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: csv_fallback.rs  database_operations.rs  error.rs  input.rs  lib.rs  main.rs  session_tracker.rs
src/routes/: +layout.svelte  +page.svelte  sessionTracker.svelte.js
