[package]
name = "session-tracker-gui"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "session_tracker_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = [] }
tauri-plugin-opener = "^2.5.3"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
rusqlite = { version = "^0.39.0", features = ["chrono", "bundled", "backup"] }
chrono = { version = "^0.4.44", features = ["serde"] }
sysinfo = "^0.38.4"
csv = "^1.4.0"
thiserror = "^2.0.18"
libsw = "3.5.0"
